Fixing alignment in the header

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -31,11 +31,21 @@ header{
         .container{
             width: 100rem;
 
+            @media only screen and (max-width: 615px) {
+               
+                justify-content: center;
+            }
             .flex-column{
 
                 &:first-of-type{
                     margin-right: auto;
+
+                    @media only screen and (max-width: 615px) {
+                        margin-bottom: 5rem;
+                        margin-right: 0;
+                    }
                 }
+
 
             }
 
