--- a/resources/sass/layout/_nav.scss
+++ b/resources/sass/layout/_nav.scss
@@ -3,7 +3,7 @@
 
     @media only screen and (max-width: 600px) {
         img{
-            width: 12rem;
+            width: 15rem;
         }
     }
 }
